[package]
name = "unicode_schedule"
version = "0.2.0"
authors = ["Sridaran Thoniyil <sri7thon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-prettytable = "0.3.0"
chrono = "0.4"
clap = "~2.33"
colored = "2.0.0"
